--- a/mongodb.yaml
+++ b/mongodb.yaml
@@ -1,20 +1,19 @@
 - name: mongodb
   hosts: mongodb
   become: yes
-  task:
-  - name: copy repo
-    ansible.builtin.copy:
-      src: mongo.repo
-      dest: etc/yum.repos.d/mongo.repo
-  
-  - name: install mongodb
-    ansible.builtin.dnf:
-      name: mongodb-org
-      state: present
-    
-  - name: mongodb status
-    ansible.builtin.service:
-      name: start mongodb
-      status: start
-      enabled: yes
-  
+  tasks:
+    - name: Copy MongoDB repo
+      ansible.builtin.copy:
+        src: mongo.repo
+        dest: /etc/yum.repos.d/mongo.repo
+
+    - name: Install MongoDB
+      ansible.builtin.dnf:
+        name: mongodb-org
+        state: present
+
+    - name: Start and enable MongoDB service
+      ansible.builtin.service:
+        name: mongod
+        state: started
+        enabled: yes
